Fixed the problem with wrapping and new line characters in the Details and Summary areas.

--- a/app/assets/scss/_queue.scss
+++ b/app/assets/scss/_queue.scss
@@ -6,3 +6,7 @@
   border-right: 0.03em dotted darkblue;
   background-color: #F0F0F0;
 }
+
+.well-details {
+  white-space: pre-wrap;
+}
